--- a/cookbooks/cicd_infrastructure/Vagrantfile
+++ b/cookbooks/cicd_infrastructure/Vagrantfile
@@ -13,12 +13,28 @@ Vagrant.configure('2') do |config|
     v.cpus = 2
   end
 
+  config.vm.provider "aws" do |aws, override|
+    override.vm.box = "aws-dummy"
+    override.vm.box_url = "https://github.com/mitchellh/vagrant-aws/raw/master/dummy.box"
+    aws.instance_type = "m3.medium"
+    aws.access_key_id = ENV["AWS_ACCESS_KEY"]
+    aws.secret_access_key = ENV["AWS_SECRET_KEY"]
+    aws.keypair_name = "secureStore-52a1c0b8e4b05801748e0e50"
+    aws.ami = "ami-52009e3b"
+    aws.security_groups = "default"
+    aws.user_data = "#!/bin/bash\necho 'Defaults:ec2-user !requiretty' > /etc/sudoers.d/999-vagrant-cloud-init-requiretty && chmod 440 /etc/sudoers.d/999-vagrant-cloud-init-requiretty\n"
+    override.ssh.username = "ec2-user"
+    override.ssh.private_key_path = ENV["AWS_SSH_KEY"]
+  end
+
   config.vm.provision :chef_solo do |chef|
     chef.json = {
     }
 
     chef.run_list = [
-        'recipe[cicd-infrastructure::default]'
+        'recipe[cicd_infrastructure::default]'
     ]
   end
 end
+
+
