--- a/cookbooks/cicd_infrastructure/Vagrantfile
+++ b/cookbooks/cicd_infrastructure/Vagrantfile
@@ -7,7 +7,7 @@ Vagrant.configure('2') do |config|
 
   config.vm.provider "virtualbox" do |v, override|
     override.vm.box = 'centos-6.5'
-    override.vm.box_url = "http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_#{config.vm.box}_chef-provisionerless.box"
+    override.vm.box_url = "http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_#{override.vm.box}_chef-provisionerless.box"
     config.vm.hostname = 'cicd-infrastructure'
     v.memory = 1024
     v.cpus = 2
