--- a/cookbooks/cicd_infrastructure/Vagrantfile
+++ b/cookbooks/cicd_infrastructure/Vagrantfile
@@ -32,7 +32,7 @@ Vagrant.configure('2') do |config|
     }
 
     chef.run_list = [
-        'recipe[cicd_infrastructure::default]'
+      'recipe[cicd_infrastructure::openldap]'
     ]
   end
 end
