--- a/cookbooks/cicd_infrastructure/Vagrantfile
+++ b/cookbooks/cicd_infrastructure/Vagrantfile
@@ -37,7 +37,7 @@ Vagrant.configure('2') do |config|
       }
     }
     chef.run_list = [
-      'recipe[cicd_infrastructure::openldap]'
+      'recipe[cicd_infrastructure::default]'
     ]
   end
 end
