--- a/manifests/main.yaml
+++ b/manifests/main.yaml
@@ -13,7 +13,7 @@ application:
       jira: "bind(jira#output.jira_endpoint)"
       openldap: "bind(openldap#output.ldap_endpoint)"
       jenkins: "bind(jenkins#output.jenkins_endpoint)"
-      gerrit: "bind(jenkins#output.gerrit_endpoint)"
+      gerrit: "bind(gerrit#output.gerrit_endpoint)"
     servers:
       jira_host: "bind(jira#output.public_ips)"
       openldap_host: "bind(openldap#output.public_ips)"
@@ -32,7 +32,7 @@ application:
             cookbooks_url:
               type: configuration(string)
               name: Cookbooks tarball URL
-          result:
+          output:
             public_ips:
               type: publish-signal(list<string>)
               name: Gerrit
