--- a/cookbooks/cicd_infrastructure/Vagrantfile
+++ b/cookbooks/cicd_infrastructure/Vagrantfile
@@ -26,9 +26,12 @@ Vagrant.configure('2') do |config|
     aws.keypair_name = "-53b42275e4b0aaf59b4b1459"
     aws.ami = "ami-52009e3b"
     aws.security_groups = "default"
-    aws.user_data = "#!/bin/bash\necho 'Defaults:ec2-user !requiretty' > \
-    /etc/sudoers.d/999-vagrant-cloud-init-requiretty && \
-    chmod 440 /etc/sudoers.d/999-vagrant-cloud-init-requiretty\n"
+    aws.user_data = "#!/bin/bash
+    echo 'Defaults:ec2-user !requiretty' > \
+      /etc/sudoers.d/999-vagrant-cloud-init-requiretty
+    chmod 440 /etc/sudoers.d/999-vagrant-cloud-init-requiretty
+    mkdir -p /etc/chef/ohai/hints
+    touch /etc/chef/ohai/hints/ec2.json"
     aws.tags = {
       'application_name' => 'ASF',
     }
