--- a/manifests/components/sonar.yaml
+++ b/manifests/components/sonar.yaml
@@ -17,7 +17,7 @@ application:
       sonar_version: "bind(workflow#input.sonar_version)"
       cookbooks_url: "bind(workflow#input.cookbooks_url)"
     output:
-      public_ips: "bind(workflow#result.public_ips)"
+      sonar_public_ips: "bind(workflow#result.sonar_public_ips)"
       sonar_endpoint: "bind(workflow#result.sonar_endpoint)"
   components:
     workflow:
@@ -31,7 +31,7 @@ application:
             type: configuration(string)
             name: Cookbooks tarball URL
         result:
-          public_ips:
+          sonar_public_ips:
             type: publish-signal(list<string>)
             name: "Instance IP"
           sonar_endpoint:
@@ -58,8 +58,10 @@ application:
                     vmIdentity: ec2-user
                     imageId: us-east-1/ami-d41689bd
                     ec2SecurityGroup: default
+                    providerSettings:
+                      userData: "#!/bin/bash\nmkdir -p /etc/chef/ohai/hints\ntouch /etc/chef/ohai/hints/ec2.json"
                   output:
-                    public_ips: ips
+                    sonar_public_ips: ips
                     private_ips: privateips
 
               - install_sonar:
@@ -76,10 +78,10 @@ application:
                   output:
                     chef_attrs: chefState
             return:
-              public_ips:
-                value: "{$.public_ips}"
+              sonar_public_ips:
+                value: "{$.sonar_public_ips}"
               sonar_endpoint:
-                value: "http://{$.public_ips}:9000"
+                value: "http://{$.sonar_public_ips}:9000"
           destroy:
             steps:
               - destroy:
