--- a/manifests/components/gerrit.yaml
+++ b/manifests/components/gerrit.yaml
@@ -1,3 +1,13 @@
+# Encoding: utf-8
+#
+# Application: Agile Software Factory
+# Component: Gerrit
+#
+# Copyright (c) 2014 Grid Dynamics International, Inc. All Rights Reserved
+# Classification level: Public
+# Licensed under the Apache License, Version 2.0.
+#
+
 application:
   configuration:
     input.gerrit_version: "2.8.6"
