--- a/manifests/components/ldap.yaml
+++ b/manifests/components/ldap.yaml
@@ -1,3 +1,13 @@
+# Encoding: utf-8
+#
+# Application: Agile Software Factory
+# Component: OpenLDAP
+#
+# Copyright (c) 2014 Grid Dynamics International, Inc. All Rights Reserved
+# Classification level: Public
+# Licensed under the Apache License, Version 2.0.
+#
+
 application:
   configuration:
     input.cookbooks_url: "http://gd-asf.s3.amazonaws.com/cookbooks.tar.gz"
