--- a/manifests/components/sonar.yaml
+++ b/manifests/components/sonar.yaml
@@ -1,3 +1,13 @@
+# Encoding: utf-8
+#
+# Application: Agile Software Factory
+# Component: Sonar
+#
+# Copyright (c) 2014 Grid Dynamics International, Inc. All Rights Reserved
+# Classification level: Public
+# Licensed under the Apache License, Version 2.0.
+#
+
 application:
   configuration:
     input.sonar_version: "3.7.4"
